fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow-y: visible;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
